# CAU-CapstoneDesign2-HYSJ

./: MPtest.py  controlTest.py  installs.sh  mp_server_test.py  pyproject.toml  webView.py
Contoller/: client_test.py  installs.sh
Contoller/components/: Client.py  ServoController.py
Recognizer/: MPtest.py  pyproject.toml
Recognizer/components/: CONST.py  Server.py  dataclass.py  landmarkHandler.py  mediapipeHandler.py
Recognizer/test/: test_MyLandmark.py  test_Vector3d.py
components/: Client.py  Server.py  ServoController.py  armRecognizer.py  dataclass.py  landmarkHandler.py  mediapipeHandler.py  myArm.py
test/: test_MyLandmark.py  test_Vector3d.py  test_coordination.py
