[tool.poetry]
name = "cau-capstonedesign2-hysj"
version = "0.1.0"
description = ""
authors = ["heheHwang <hehehwang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.5.3.*"
mediapipe = "^0.8.9"
plotly = "^5.3.1"
dash = "^2.0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
mypy = "^0.910"
pylint = "^2.11.1"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
